@@ -43,16 +43,20 @@ import org.eclipse.cdt.core.dom.ast.IASTTranslationUnit;
 import org.eclipse.cdt.core.dom.ast.gnu.c.GCCLanguage;
 import org.eclipse.cdt.core.dom.parser.c.ANSICParserExtensionConfiguration;
 import org.eclipse.cdt.core.dom.parser.c.ICParserExtensionConfiguration;
+import org.eclipse.cdt.core.index.IIndexFileLocation;
 import org.eclipse.cdt.core.model.ILanguage;
 import org.eclipse.cdt.core.parser.FileContent;
 import org.eclipse.cdt.core.parser.IParserLogService;
 import org.eclipse.cdt.core.parser.IScannerInfo;
-import org.eclipse.cdt.core.parser.IncludeFileContentProvider;
 import org.eclipse.cdt.core.parser.ParserFactory;
+import org.eclipse.cdt.internal.core.parser.IMacroDictionary;
+import org.eclipse.cdt.internal.core.parser.InternalParserUtil;
+import org.eclipse.cdt.internal.core.parser.scanner.InternalFileContent;
+import org.eclipse.cdt.internal.core.parser.scanner.InternalFileContentProvider;
 import org.eclipse.core.runtime.CoreException;
-import org.sosy_lab.common.Pair;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
+import org.sosy_lab.common.io.Path;
 import org.sosy_lab.common.io.Paths;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
@@ -74,7 +78,7 @@ import com.google.common.collect.Lists;
 /**
  * Wrapper for Eclipse CDT 7.0 and 8.* (internal version number since 5.2.*)
  */
-public class EclipseCParser implements CParser {
+class EclipseCParser implements CParser {
 
   protected final ILanguage language;
 
@@ -107,25 +111,38 @@ public class EclipseCParser implements CParser {
     }
   }
 
+  /**
+   * Convert paths like "file.c" to "./file.c",
+   * and return all other patchs unchanged.
+   * The pre-processor of Eclipse CDT needs this to resolve relative includes.
+   */
+  private static String fixPath(String pPath) {
+    Path path = Paths.get(pPath);
+    if (!path.isEmpty() && !path.isAbsolute() && path.getParent().isEmpty()) {
+      return Paths.get(".").resolve(path).toString();
+    }
+    return pPath;
+  }
+
   private FileContent wrapCode(FileContentToParse pContent) {
-    return FileContent.create(pContent.getFileName(), pContent.getFileContent().toCharArray());
+    return FileContent.create(fixPath(pContent.getFileName()), pContent.getFileContent().toCharArray());
   }
 
   private FileContent wrapCode(String pFileName, String pCode) {
-    return FileContent.create(pFileName, pCode.toCharArray());
+    return FileContent.create(fixPath(pFileName), pCode.toCharArray());
   }
 
   private final FileContent wrapFile(String pFileName) throws IOException {
     String code = Paths.get(pFileName).asCharSource(Charset.defaultCharset()).read();
-    return wrapCode(pFileName, code);
+    return wrapCode(fixPath(pFileName), code);
   }
 
   @Override
   public ParseResult parseFile(List<FileToParse> pFilenames, CSourceOriginMapping sourceOriginMapping) throws CParserException, IOException, InvalidConfigurationException {
 
-    List<Pair<IASTTranslationUnit, String>> astUnits = new ArrayList<>();
-    for(FileToParse f: pFilenames) {
-      astUnits.add(Pair.of(parse(wrapFile(f.getFileName())), f.getStaticVariablePrefix()));
+    List<IASTTranslationUnit> astUnits = new ArrayList<>();
+    for (FileToParse f: pFilenames) {
+      astUnits.add(parse(wrapFile(f.getFileName())));
     }
     return buildCFA(astUnits, sourceOriginMapping);
   }
@@ -133,9 +150,9 @@ public class EclipseCParser implements CParser {
   @Override
   public ParseResult parseString(List<FileContentToParse> codeFragments, CSourceOriginMapping sourceOriginMapping) throws CParserException, InvalidConfigurationException {
 
-    List<Pair<IASTTranslationUnit, String>> astUnits = new ArrayList<>();
-    for(FileContentToParse f : codeFragments) {
-      astUnits.add(Pair.of(parse(wrapCode(f)), f.getStaticVariablePrefix()));
+    List<IASTTranslationUnit> astUnits = new ArrayList<>();
+    for (FileContentToParse f : codeFragments) {
+      astUnits.add(parse(wrapCode(f)));
     }
     return buildCFA(astUnits, sourceOriginMapping);
   }
@@ -147,9 +164,8 @@ public class EclipseCParser implements CParser {
   public ParseResult parseFile(String pFilename, CSourceOriginMapping sourceOriginMapping) throws CParserException, IOException, InvalidConfigurationException {
 
     IASTTranslationUnit unit = parse(wrapFile(pFilename));
-    String prefix = "";
-    List<Pair<IASTTranslationUnit, String>> returnParam = new ArrayList<>();
-    returnParam.add(Pair.of(unit, prefix));
+    List<IASTTranslationUnit> returnParam = new ArrayList<>();
+    returnParam.add(unit);
     return buildCFA(returnParam, sourceOriginMapping);
   }
 
@@ -160,9 +176,8 @@ public class EclipseCParser implements CParser {
   public ParseResult parseString(String pFilename, String pCode, CSourceOriginMapping sourceOriginMapping) throws CParserException, InvalidConfigurationException {
 
     IASTTranslationUnit unit = parse(wrapCode(pFilename, pCode));
-    String prefix = "";
-    List<Pair<IASTTranslationUnit, String>> returnParam = new ArrayList<>();
-    returnParam.add(Pair.of(unit, prefix));
+    List<IASTTranslationUnit> returnParam = new ArrayList<>();
+    returnParam.add(unit);
     return buildCFA(returnParam, sourceOriginMapping);
   }
 
@@ -228,8 +243,8 @@ public class EclipseCParser implements CParser {
 
     List<CAstNode> nodeList = new ArrayList<>(statements.length);
 
-    for(IASTStatement statement : statements) {
-      if(statement != null) {
+    for (IASTStatement statement : statements) {
+      if (statement != null) {
         nodeList.add(converter.convert(statement));
       }
     }
@@ -251,15 +266,22 @@ public class EclipseCParser implements CParser {
     try {
       IASTTranslationUnit result = getASTTranslationUnit(codeReader);
 
-      IASTPreprocessorIncludeStatement[] includes = result.getIncludeDirectives();
-      if (includes.length > 0) {
-        throw new CParserException("File has #include directives and needs to be pre-processed.");
+      // Separate handling of include problems
+      // so that we can give a better error message.
+      for (IASTPreprocessorIncludeStatement include : result.getIncludeDirectives()) {
+        if (!include.isResolved()) {
+          if (include.isSystemInclude()) {
+            throw new CFAGenerationRuntimeException("File includes system headers, either preprocess it manually or specify -preprocess.");
+          } else {
+            throw new CFAGenerationRuntimeException("Included file " + include.getName() + " is missing", include, Functions.<String>identity());
+          }
+        }
       }
 
       // Report the preprocessor problems.
       // TODO this shows only the first problem
       for (IASTProblem problem : result.getPreprocessorProblems()) {
-        throw new CFAGenerationRuntimeException(problem);
+        throw new CFAGenerationRuntimeException(problem, Functions.<String>identity());
       }
 
       return result;
@@ -277,7 +299,7 @@ public class EclipseCParser implements CParser {
   private IASTTranslationUnit getASTTranslationUnit(FileContent pCode) throws CParserException, CFAGenerationRuntimeException, CoreException {
     return language.getASTTranslationUnit(pCode,
                                           StubScannerInfo.instance,
-                                          IncludeFileContentProvider.getEmptyFilesProvider(),
+                                          FileContentProvider.instance,
                                           null,
                                           PARSER_OPTIONS,
                                           parserLog);
@@ -291,7 +313,7 @@ public class EclipseCParser implements CParser {
    * @throws CParserException
    * @throws InvalidConfigurationException
    */
-  private ParseResult buildCFA(List<Pair<IASTTranslationUnit, String>> asts,
+  private ParseResult buildCFA(List<IASTTranslationUnit> asts,
       CSourceOriginMapping sourceOriginMapping) throws CParserException, InvalidConfigurationException {
     checkArgument(!asts.isEmpty());
     cfaTimer.start();
@@ -299,8 +321,19 @@ public class EclipseCParser implements CParser {
     Function<String, String> niceFileNameFunction = createNiceFileNameFunction(asts);
     try {
       CFABuilder builder = new CFABuilder(config, logger, niceFileNameFunction, sourceOriginMapping, machine);
-      for(Pair<IASTTranslationUnit, String> ast : asts) {
-        builder.analyzeTranslationUnit(ast.getFirst(), ast.getSecond());
+
+      // we don't need any file prefix if we only have one file
+      if (asts.size() == 1) {
+        builder.analyzeTranslationUnit(asts.get(0), "");
+
+        // in case of several files we need to add a file prefix to global variables
+        // as there could be several equally named files in different directories
+        // we consider not only the file name but also the path for creating
+        // the prefix
+      } else {
+        for (IASTTranslationUnit ast : asts) {
+          builder.analyzeTranslationUnit(ast, niceFileNameFunction.apply(ast.getFilePath()).replace("/", "_").replaceAll("\\W", "_"));
+        }
       }
 
       return builder.createCFA();
@@ -319,11 +352,11 @@ public class EclipseCParser implements CParser {
    * The result may be the empty string, if for example CPAchecker only uses
    * one file (we expect the user to know its name in this case).
    */
-  private Function<String, String> createNiceFileNameFunction(List<Pair<IASTTranslationUnit, String>> asts) {
-    Iterator<String> fileNames = Lists.transform(asts, new Function<Pair<IASTTranslationUnit, String>, String>() {
+  private Function<String, String> createNiceFileNameFunction(List<IASTTranslationUnit> asts) {
+    Iterator<String> fileNames = Lists.transform(asts, new Function<IASTTranslationUnit, String>() {
       @Override
-      public String apply(Pair<IASTTranslationUnit, String> pInput) {
-        return pInput.getFirst().getFilePath();
+      public String apply(IASTTranslationUnit pInput) {
+        return pInput.getFilePath();
       }}).iterator();
 
     if (asts.size() == 1) {
@@ -447,6 +480,24 @@ public class EclipseCParser implements CParser {
     @Override
     public String[] getIncludePaths() {
       return new String[0];
+    }
+  }
+
+  private static class FileContentProvider extends InternalFileContentProvider {
+
+    static final InternalFileContentProvider instance = new FileContentProvider();
+
+    @Override
+    public InternalFileContent getContentForInclusion(String pFilePath,
+        IMacroDictionary pMacroDictionary) {
+      return InternalParserUtil.createExternalFileContent(pFilePath,
+          InternalParserUtil.SYSTEM_DEFAULT_ENCODING);
+    }
+
+    @Override
+    public InternalFileContent getContentForInclusion(IIndexFileLocation pIfl,
+        String pAstPath) {
+      return InternalParserUtil.createFileContent(pIfl);
     }
   }
 }
